--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "build:netlify": "npm run build && cp _redirects build/_redirects",
     "eject": "react-scripts eject"
   }
 }
